# fish-lead-qualification

./: .dockerignore  .gitignore  CONTRACT.md  DEPLOY.md  Dockerfile  README.md
prompts/: extraction_prompt.md  runbook.md  system_prompt.md
web/: .env.example  README.md  package-lock.json  package.json  server.js  vercel.json
web-next/: .env.example  README.md  app-config.ts  package.json
web-next/app/: layout.tsx
web-next/app/api/token/: route.ts
web-next/components/agents-ui/blocks/agent-session-view-01/components/: agent-session-block.tsx
web-next/components/app/: app.tsx  lead-qual-view.tsx  view-controller.tsx  welcome-view.tsx
web-next/hooks/: useWaveform.ts
web-next/lib/: call-sounds.ts  utils.ts
web-next/styles/: paper.css
web/public/: index.html
worker/: .dockerignore  .env.example  Dockerfile  README.md  livekit.toml  pyproject.toml
worker/prompts/: extraction_prompt.md  runbook.md
worker/src/lead_qual_worker/: __init__.py  languages.py  main.py  qualification.py
